// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityTitle should render the entity title as found in thesauris 1`] = `
<span
  className="entity-title"
>
  Entity 1
</span>
`;

exports[`EntityTitle should render the entity title as found in thesauris 2`] = `
<span
  className="entity-title"
>
  Entity 2
</span>
`;

exports[`EntityTitle should render the entity title as found in thesauris 3`] = `
<span
  className="entity-title"
>
  Entity 3
</span>
`;
